<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/filter"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivArrowClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="@id/tvFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvFilter"
            android:contentDescription="@string/image" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_half_of_dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFilter" />

        <TextView
            android:id="@+id/tvView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:text="@string/view"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFilter" />


        <ImageView
            android:id="@+id/ivView"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:src="@drawable/ic_grid_view"
            app:layout_constraintBottom_toBottomOf="@id/tvView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvView"
            android:contentDescription="@string/image" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_half_of_dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilShowFirst"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:hint="@string/show_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvView">

            <AutoCompleteTextView
                android:id="@+id/autoCTvShowFirst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/any"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_half_of_dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilShowFirst" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/type"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilShowFirst" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:paddingBottom="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvType"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTypeAll"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTypeOnlySeller"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_seller" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTypeOnlyShop"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_shop" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_half_of_dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgType" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/status"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgType" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_0dp"
            android:paddingStart="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:paddingBottom="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipStatusAll"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/any" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipStatusNew"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_new" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipStatusAlmostNew"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like_a_new" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipStatusSecondHand"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_hand" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipStatusDetails"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_half_of_dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgStatus" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/price"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgStatus" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:paddingBottom="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrice"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAnyPrice"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/any_price" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipOnlyPrice"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_with_price" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipNegotiablePrice"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negotiable_price" />
        </com.google.android.material.chip.ChipGroup>

        <EditText
            android:id="@+id/etPriceFrom"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:inputType="number"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:hint="@string/from"
            app:layout_constraintEnd_toStartOf="@id/etPriceTill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgPrice" />

        <EditText
            android:id="@+id/etPriceTill"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:inputType="number"
            android:hint="@string/till"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etPriceFrom"
            app:layout_constraintTop_toBottomOf="@id/cgPrice" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_half_of_dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPriceFrom" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/location"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPriceFrom" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:paddingBottom="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLocationAll"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/any_location" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLocationTbilisi"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbilisi" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLocationKutaisi"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kutaisi" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLocationBatumi"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batumi" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLocationGori"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gori" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLocationPoti"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poti" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_100dp"
            android:id="@+id/btnAdjust"
            android:text="@string/adjust_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgLocation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>