<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:padding="@dimen/dimen_10dp"
    app:cardCornerRadius="@dimen/dimen_15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="170dp"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:backgroundTint="?colorOnPrimary"
            app:cardCornerRadius="@dimen/dimen_100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/dimen_10dp"
                android:contentDescription="@string/image"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_heart_filled" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/cvImage"
            app:layout_constraintTop_toBottomOf="@id/cvImage" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/condition"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="@id/cvImage"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>